修改命令执行工具